--- a/pom.xml
+++ b/pom.xml
@@ -6,7 +6,7 @@
     <groupId>me.atlis</groupId>
     <artifactId>panoramio-api</artifactId>
 
-    <version>1.0.0-SNAPSHOT</version>
+    <version>1.0.0</version>
     <packaging>jar</packaging>
 
     <name>Panoramio-API</name>
@@ -27,7 +27,7 @@
         <connection>scm:git://git@github.com:AtlisInc/Panoramio-API.git</connection>
         <developerConnection>scm:git:git@github.com:AtlisInc/Panoramio-API.git</developerConnection>
         <url>http://github.com/AtlisInc/Panoramio-API</url>
-        <tag>HEAD</tag>
+        <tag>panoramio-api-1.0.0</tag>
     </scm>
 
     <properties>
