--- a/pom.xml
+++ b/pom.xml
@@ -6,7 +6,7 @@
     <groupId>me.atlis</groupId>
     <artifactId>panoramio-api</artifactId>
 
-    <version>1.0.1-SNAPSHOT</version>
+    <version>1.0.1</version>
     <packaging>jar</packaging>
 
     <name>Panoramio-API</name>
